logs/tryton.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tryton'...
Listing './lib/python3.5/site-packages/tryton/action'...
Listing './lib/python3.5/site-packages/tryton/common'...
Compiling './lib/python3.5/site-packages/tryton/common/common.py'...
***   File "./lib/python3.5/site-packages/tryton/common/common.py", line 976
    except (socket.error, xmlrpclib.Fault), exception:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/common/datetime_.py'...
***   File "./lib/python3.5/site-packages/tryton/common/datetime_.py", line 480
    None, cursor, 0L)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/common/domain_parser.py'...
***   File "./lib/python3.5/site-packages/tryton/common/domain_parser.py", line 905
    except ValueError, exception:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/common/htmltextbuffer.py'...
***   File "./lib/python3.5/site-packages/tryton/common/htmltextbuffer.py", line 410
    print text_buffer.serialize(
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/config.py'...
***   File "./lib/python3.5/site-packages/tryton/config.py", line 29
    os.makedirs(get_config_dir(), 0700)
                                     ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/tryton/data'...
Listing './lib/python3.5/site-packages/tryton/data/locale'...
Listing './lib/python3.5/site-packages/tryton/data/locale/bg'...
Listing './lib/python3.5/site-packages/tryton/data/locale/bg/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ca'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/cs'...
Listing './lib/python3.5/site-packages/tryton/data/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/de'...
Listing './lib/python3.5/site-packages/tryton/data/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/es'...
Listing './lib/python3.5/site-packages/tryton/data/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/es_419'...
Listing './lib/python3.5/site-packages/tryton/data/locale/es_419/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/fr'...
Listing './lib/python3.5/site-packages/tryton/data/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/hu_HU'...
Listing './lib/python3.5/site-packages/tryton/data/locale/hu_HU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/it_IT'...
Listing './lib/python3.5/site-packages/tryton/data/locale/it_IT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ja_JP'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ja_JP/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/lo'...
Listing './lib/python3.5/site-packages/tryton/data/locale/lo/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/lt'...
Listing './lib/python3.5/site-packages/tryton/data/locale/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/nl'...
Listing './lib/python3.5/site-packages/tryton/data/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/pl'...
Listing './lib/python3.5/site-packages/tryton/data/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/pt_BR'...
Listing './lib/python3.5/site-packages/tryton/data/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ru'...
Listing './lib/python3.5/site-packages/tryton/data/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/sl'...
Listing './lib/python3.5/site-packages/tryton/data/locale/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/locale/zh_CN'...
Listing './lib/python3.5/site-packages/tryton/data/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tryton/data/pixmaps'...
Listing './lib/python3.5/site-packages/tryton/data/pixmaps/tryton'...
Listing './lib/python3.5/site-packages/tryton/gui'...
Compiling './lib/python3.5/site-packages/tryton/gui/main.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/main.py", line 868
    except TrytonError, exception:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton/gui/window'...
Compiling './lib/python3.5/site-packages/tryton/gui/window/preference.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/window/preference.py", line 93
    except TrytonError, exception:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton/gui/window/view_board'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/model'...
Compiling './lib/python3.5/site-packages/tryton/gui/window/view_form/model/record.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/window/view_form/model/record.py", line 119
    except RPCException, exception:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/screen'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/view'...
Compiling './lib/python3.5/site-packages/tryton/gui/window/view_form/view/calendar_.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/window/view_form/view/calendar_.py", line 14
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/view/calendar_gtk'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/view/form_gtk'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/view/graph_gtk'...
Listing './lib/python3.5/site-packages/tryton/gui/window/view_form/view/list_gtk'...
Compiling './lib/python3.5/site-packages/tryton/gui/window/win_export.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/window/win_export.py", line 96
    key = lambda (n, f): f.get('string') or n
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/gui/window/wizard.py'...
***   File "./lib/python3.5/site-packages/tryton/gui/window/wizard.py", line 95
    except RPCException, rpc_exception:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tryton/ipc.py'...
***   File "./lib/python3.5/site-packages/tryton/ipc.py", line 104
    os.mkfifo(self.filename, 0600)
                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/tryton/jsonrpc.py'...
***   File "./lib/python3.5/site-packages/tryton/jsonrpc.py", line 274
    except (socket.error, httplib.HTTPException), v:
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton/plugins'...
Listing './lib/python3.5/site-packages/tryton/plugins/translation'...
Compiling './lib/python3.5/site-packages/tryton/rpc.py'...
***   File "./lib/python3.5/site-packages/tryton/rpc.py", line 44
    except Fault, exception:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tryton-4.6.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
